bugfix: gerenciamento de multiplicidade entre user e role