@@ -9,6 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -22,27 +23,29 @@ public class UserService {
     @Autowired
     private BCryptPasswordEncoder passwordEncoder;
 
-    public User saveUser(UserDTO userDto) throws Exception{
+    public User saveUser(UserDTO userDto) {
         User user = new User();
         user.setUsername(userDto.getUsername());
         user.setEmail(userDto.getEmail());
         user.setPassword(passwordEncoder.encode(userDto.getPassword()));
 
-        Role role = roleRepository.findByName("ADMIN");
-        if(role == null){
-            role = checkRoleExist();
-        }
-        user.setRoles(List.of(role));
+        Role userRole = roleRepository.findByName(userDto.isAdmin() ? "ROLE_ADMIN" : "ROLE_USER")
+                .orElseThrow(() -> new RuntimeException("Role not found."));
+        user.setRoles(Collections.singletonList(userRole));
         return userRepository.save(user);
     }
 
-    public User alterUser(UserDTO userDto, Long id) throws Exception{
-        User user = new User();
-        user.setId(id);
-        user.setUsername(userDto.getUsername());
-        user.setPassword(userDto.getPassword());
-        return userRepository.save(user);
+
+    public User alterUser(UserDTO userDto, Long id) {
+        User existingUser = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        existingUser.setUsername(userDto.getUsername());
+        existingUser.setEmail(userDto.getEmail());
+        existingUser.setPassword(userDto.getPassword());
+        return userRepository.save(existingUser);
     }
+
 
     public User findUserById(Long id) {
         return userRepository.findById(id).orElseThrow(() -> new RuntimeException("Usuário não encontrado."));
@@ -71,13 +74,6 @@ public class UserService {
         usuarioDTO.setEmail(usuario.getEmail());
         usuarioDTO.setPassword(usuario.getPassword());
         return usuarioDTO;
-    }
-
-
-    private Role checkRoleExist(){
-        Role role = new Role();
-        role.setName("ROLE_ADMIN");
-        return roleRepository.save(role);
     }
 
     public void deleteUser(Long id) throws Exception{
